<?xml version="1.0"?>
<package format="2">
  <name>aco_planner</name>
  <version>0.1.0</version>
  <description>

     road publisher using a star method.

  </description>
  <maintainer email="ivrc@bit.edu.cn">IVRC</maintainer>
  <author>IVRC</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
